@@ -20,24 +20,28 @@ Version 1.0.7 to be released
 - Bug #393: Greek language code should be 'el' insead of 'gr' (Qiang)
 - Bug #402: CNumberFormatter does not format decimals and percentages correctly (Qiang)
 - Bug #404: AR would fail when CDbLogRoute uses the same DB connection (Qiang)
+- Bug #421: Undefined variable: seconds in CDateTimeParser.php(140) (Qiang)
 - Bug: CMemCache has a typo when using memcached (Qiang)
 - Bug: COciCommandBuilder is referencing undefined variable (Qiang)
 - Bug: yiic webapp may generate incorrect path to yii.php (Qiang)
 - Bug: SQL with OFFSET generated by command builder for Oracle is incorrect (Qiang)
 - Bug: yiic shell model command may fail when a foreign key is named as ID (Qiang)
 - Bug: yiic shell controller command does not generate correct controller class file when the controller is under a sub-folder (Qiang)
+- Bug: When using MySQL enum type, AR may incorrectly typcasting the column values (Qiang)
 - Chg #391: defaultScope should not be applied to UPDATE (Qiang)
 - New #360: Added anchor parameter to CController::redirect (Qiang)
 - New #375: Added support to allow logout a user without cleaning up non-auth session data (Qiang)
 - New #378: Added support to allow dynamically turning off and on log routes (Qiang)
 - New #396: Improved error display when running yiic commands (Qiang)
 - New #406: Added support to allow stopping saving and deletion by an ActiveRecord behavior (Qiang)
+- New #415: Added HTML options to CHtml::errorSummary() and error() methods (Qiang)
 - New: Rolled back the change about treating tinyint(1) in MySQL as boolean (Qiang)
 - New: Added support for displaying call stack information in trace messages (Qiang)
 - New: Added 'index' option to AR relations so that related objects can be indexed by specific column value (Qiang)
 - New: Allow CHtml::activeLabel to override the automatically generated 'for' attribute (Qiang)
 - New: Added 'csrf' to CHtml client options so that js-based form submission can submit CSRF token (Qiang)
 - New: Removed typcasting in CNumberValidator so that it won't lose precision (Qiang)
+- New: Added userAgent parameter to CHttpRequest::getBrowser() (Qiang)
 
 Version 1.0.6 June 7, 2009
 --------------------------
